string updates for date and 4.0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -6,7 +6,7 @@
 # This section contains metadata used by VUE to identify the language and file verions
 info.language    = English
 info.fileVersion = 1.1
-info.VUEVersion  = 3.3.0
+info.VUEVersion  = 4.0.0
 
 #mapviewer component menu
 mapViewer.componentMenu.info.label=Info
@@ -2323,9 +2323,9 @@ dsv.statuspanel.bgColor=#FFFFFF
 dsv.statuspanel.waitIcon=/tufts/vue/images/icon_feedback.gif
 
 #Version
-vue.version=3.3.0
+vue.version=4.0.0
 
-vue.build.date=2003-2015
+vue.build.date=2003-2020
 
 vue.release.url=http://vue.tufts.edu/current_release.xml
 
@@ -2334,7 +2334,7 @@ vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
 #help menu
 helpMenu.feedback.url=http://vue.tufts.edu/contact/
 
-helpMenu.userGuide.url=http://vue.tufts.edu/userdoc/
+helpMenu.userGuide.url=http://vue.tufts.edu/
 
 helpMenu.vueWebsite.url=https://vue-forums.uit.tufts.edu/
 
