Fix error in "Add Resource" - wasn't following redirects, and server is serving https-only now.

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2617,7 +2617,7 @@ layout.miny_radius=400
 dockWindow.helpTextHeader=<html><head></head><body><font face="arial" size="3">
 dockWindow.helpTextFooter=</font></body></html>
 
-repository_url=http://vue.tufts.edu/osidRepository/repositories.xml
+repository_url=https://vue.tufts.edu/osidRepository/repositories.xml
 
 mapinspectorpanel.objectStats.format=<html>%s&nbsp;%d&nbsp;&nbsp;&nbsp; %s&nbsp;%d&nbsp;&nbsp;&nbsp; %s&nbsp;%d</html>
 mapinspectorpanel.connectivityStats.format=<html>%s&nbsp;%d&nbsp;&nbsp;&nbsp; %s&nbsp;%d&nbsp;&nbsp;&nbsp; %s&nbsp;%.2f</html>
